[gd_scene load_steps=14 format=3 uid="uid://cifpxm8kw4cbu"]

[ext_resource type="Script" path="res://scenes/docks/query_dock/result_menu/result_menu.gd" id="1_2quaq"]
[ext_resource type="Texture2D" uid="uid://6g2q8n6ent21" path="res://icons/arrow_left.svg" id="2_ahkhd"]
[ext_resource type="Texture2D" uid="uid://uci76ke48xhc" path="res://icons/arrow_right.svg" id="3_dg6i0"]
[ext_resource type="Texture2D" uid="uid://dqbj5oro8w4kk" path="res://icons/progress_1.svg" id="5_v67du"]
[ext_resource type="Texture2D" uid="uid://cejx54xlep5du" path="res://icons/progress_2.svg" id="6_0p5u4"]
[ext_resource type="Texture2D" uid="uid://cunnumvipgaey" path="res://icons/progress_3.svg" id="7_dqvw0"]
[ext_resource type="Texture2D" uid="uid://wvlq05kjfwvw" path="res://icons/progress_4.svg" id="8_rl8us"]
[ext_resource type="Texture2D" uid="uid://d1rrw2h3pf6dn" path="res://icons/progress_5.svg" id="9_8jdxx"]
[ext_resource type="Texture2D" uid="uid://js4lpo60l5of" path="res://icons/progress_6.svg" id="10_jk4p0"]
[ext_resource type="Texture2D" uid="uid://c7fnaqdg1l5qi" path="res://icons/progress_7.svg" id="11_6bmbs"]
[ext_resource type="Texture2D" uid="uid://c78yb30g6771q" path="res://icons/progress_8.svg" id="12_xipfl"]
[ext_resource type="Texture2D" uid="uid://cfvtv2sw3ymjh" path="res://icons/magnifying_glass.svg" id="13_7wxmr"]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_imq4c"]
frames = 8
speed_scale = 12.0
frame_0/texture = ExtResource("5_v67du")
frame_1/texture = ExtResource("6_0p5u4")
frame_1/duration = 1.0
frame_2/texture = ExtResource("7_dqvw0")
frame_2/duration = 1.0
frame_3/texture = ExtResource("8_rl8us")
frame_3/duration = 1.0
frame_4/texture = ExtResource("9_8jdxx")
frame_4/duration = 1.0
frame_5/texture = ExtResource("10_jk4p0")
frame_5/duration = 1.0
frame_6/texture = ExtResource("11_6bmbs")
frame_6/duration = 1.0
frame_7/texture = ExtResource("12_xipfl")
frame_7/duration = 1.0

[node name="ResultMenu" type="HFlowContainer" node_paths=PackedStringArray("page_label", "eof", "loading")]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 26.0
grow_horizontal = 2
script = ExtResource("1_2quaq")
page_label = NodePath("Page")
eof = NodePath("EOF")
loading = NodePath("Loading")

[node name="Previous" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("2_ahkhd")

[node name="Page" type="Button" parent="."]
layout_mode = 2
disabled = true
text = "0"

[node name="Next" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("3_dg6i0")

[node name="EOF" type="Label" parent="."]
layout_mode = 2
text = "Last page"

[node name="Empty" type="Control" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="Loading" type="TextureRect" parent="."]
layout_mode = 2
size_flags_horizontal = 10
texture = SubResource("AnimatedTexture_imq4c")
expand_mode = 3

[node name="Search" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 8
toggle_mode = true
icon = ExtResource("13_7wxmr")

[connection signal="pressed" from="Previous" to="." method="_on_previous_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_next_pressed"]
[connection signal="toggled" from="Search" to="." method="_on_search_toggled"]
